Fix profile image bug on mobile

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -155,6 +155,11 @@ body{
 .contributor-profile {
   text-align: center;
 
+  .circular {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   h3{
     &:hover{
     }
